@@ -6,6 +6,8 @@ import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Scanner;
 import java.util.function.Consumer;
@@ -22,13 +24,15 @@ public class UpdateChecker {
 
     public void getVersion(final Consumer<String> consumer) {
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
-            try (InputStream inputStream = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + 108639)
+            try (InputStream inputStream = new URI("https://api.spigotmc.org/legacy/update.php?resource=" + 108639).toURL()
                     .openStream(); Scanner scanner = new Scanner(inputStream)) {
                 if (scanner.hasNext()) {
                     consumer.accept(scanner.next());
                 }
             } catch (IOException e) {
-                main.getLog().error("Unable to check for updates!\n{}", e.getMessage());
+                main.getLog().error("IOException: Unable to check for updates!\n{}", e.getMessage());
+            } catch (URISyntaxException e) {
+                main.getLog().error("URISyntaxException: Unable to check for updates!\n{}", e.getMessage());
             }
         });
     }
